version/0.12/_sources/api/solver/_autosummary/settings/solution_animations.rst.txt
:orphan:

.. _solution_animations:

solution_animations
===================

.. currentmodule:: ansys.fluent.core.solver.settings_231.solution_animations

.. autoclass:: solution_animations
    :show-inheritance:
    :undoc-members:
.. rubric:: Commands

========================================   =============================================

Command                                                                          Summary

========================================   =============================================
:ref:`display <display_1>`                                      Display graphics object.

:ref:`copy <copy_3>`                                               Copy graphics object.

:ref:`add_to_graphics <add_to_graphics>`       Add graphics object to existing graphics.

:ref:`clear_history <clear_history>`                               Clear object history.

========================================   =============================================

.. rubric:: Named object type

:ref:`solution_animations_child <solution_animations_child>`


.. rubric:: Included in:

==================================================   =================================

Parent                                                                         Summary

==================================================   =================================
:ref:`calculation_activity <calculation_activity>`       'calculation_activity' child.

==================================================   =================================

