version/0.18/_sources/api/solver/_autosummary/settings/solution_animations.rst.txt
:orphan:

.. _solution_animations:

solution_animations
===================

.. autoclass:: ansys.fluent.core.solver.settings_232.solution_animations.solution_animations
    :show-inheritance:

.. rubric:: Methods

========================================   =============================================

Method                                                                           Summary

========================================   =============================================
:ref:`list <list>`                                                       'list' command.

:ref:`list_properties <list_properties>`                      'list_properties' command.

:ref:`duplicate <duplicate>`                                        'duplicate' command.

:ref:`display <display_2>`                                      Display graphics object.

:ref:`copy <copy_4>`                                               Copy graphics object.

:ref:`add_to_graphics <add_to_graphics>`       Add graphics object to existing graphics.

:ref:`clear_history <clear_history>`                               Clear object history.

========================================   =============================================

.. rubric:: Named object type

:ref:`solution_animations_child <solution_animations_child>`


.. rubric:: Included in:

==================================================   =================================

Parent                                                                         Summary

==================================================   =================================
:ref:`calculation_activity <calculation_activity>`       'calculation_activity' child.

==================================================   =================================

